Fix course progress alignment in divi editor

--- a/assets/blocks/course-list-block/course-list-block-editor.scss
+++ b/assets/blocks/course-list-block/course-list-block-editor.scss
@@ -22,6 +22,10 @@
 			.wp-block-post {
 				.wp-block-group {
 					height: 100%;
+
+					.wp-block-post-excerpt {
+						flex: 1;
+					}
 				}
 			}
 		}
